Fix case sensitivity in K8s manifest paths
Updated Kubernetes manifest paths to use correct casing.

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -63,8 +63,8 @@ jobs:
       # --- Apply manifests ---
       - name: Apply K8s manifests
         run: |
-          kubectl apply -f k8s/service.yaml
-          kubectl apply -f k8s/deployment.yaml
+          kubectl apply -f K8s/service.yaml
+          kubectl apply -f K8s/deployment.yaml
 
       # --- Rollout new image ---
       - name: Set image & rollout
